--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "http-proxy-middleware": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "request": "^2.88.2"
+  },
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
   }
 }
